@@ -8,6 +8,22 @@ The codes attached is a sample Javafx UI code that does the following:
 
 Note that all of the data are simulated.
 
+
+****Create executatble Jar file using intellij 
+1.)Go to project Structure >> Articfacts >> ADD JAR >> from modules and dependencies.
+2.)Create Manifest file
+3.)Extract elements to output root (may not need)
+4.)Click build artifact.
+
+5.)Go to terminal and run the java -jar using the following command.
+Java --module-path /Users/puanxuesheng/Desktop/JavaLibrary/javafx-sdk-13.0.2 --add-modules javafx.controls,javafx.fxml,javafx.graphics -jar 
+
+for more details:
+https://openjfx.io/openjfx-docs/#modular
+
+
+
+
 DISCLAIMER: The attached Code is provided As Is. It has not been tested or validated as a product, 
 for use in a deployed application or system, or for use in hazardous environments. 
 You assume all risks for use of the Code!!!
